# Klangboard

./: CMakeLists.txt  Makefile  Readme.md  main.cpp
src/UI/: OpenFileDialog.h  TextBox.cpp  TextBox.h  Theme.cpp  Theme.h  UI.cpp  UI.h
src/core/: Button.cpp  Button.h  ButtonCheck.h  ButtonManager.cpp  ButtonManager.h  general.h
src/core/SoundBoard/: SoundBoardEntry.cpp  SoundboardEntry.h  SoundboardManager.cpp  SoundboardManager.h
